[package]
authors = ["Роман Масленников <m3angreen@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "pt-hello"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
nb = "0.1.2"
embedded-hal = "0.2.3"
log = "0.4.8"
nrf52832-hal = { version = "0.10", features = ["rt", "xxAA-package"], default-features = false }

[dependencies.jlink_rtt]
path = "jlink_rtt/rtt"

[[bin]]
name = "pt-hello"
test = false
bench = false

[profile.dev]
opt-level = 2

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
