[package]
authors = ["Роман Масленников <m3angreen@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "pt-hello"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.12"
nrf52832-hal = { version = "0.11", features = ["rt", "xxAA-package"], default-features = false }
hrs3300 = "0.1"
jlink_rtt = {path = "jlink_rtt/rtt"}

[patch.crates-io]
nrf52832-hal = { git = "https://github.com/nrf-rs/nrf-hal" }
#embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal.git"}

[[bin]]
name = "pt-hello"
test = false
bench = false

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
